# Homegear-HomeMaticBidCoS

./: .gitignore  .project  CMakeLists.txt  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  getVersion.sh  libtool  makeCoverity.sh  makeDebug.sh  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
homegear-easycam/: .project  Makefile  Todo.txt  config.h  config.status  configure  configure.ac  libtool
homegear-easycam/misc/: EASYCam-250px.ai  EASYCam-50px.ai  EASYCam.xml  EasyCamConfig.tcl  datapointconfigurator.fn  webui.js
homegear-easycam/src/: DeviceTypes.h  EasyCam.cpp  EasyCam.h  EasyCamDevice.cpp  EasyCamDevice.h  EasyCamPacket.cpp  EasyCamPacket.h  EasyCamPeer.cpp  EasyCamPeer.h  Factory.cpp  Factory.h  GD.cpp  GD.h  Makefile  Makefile.am  Makefile.in
homegear-easycam/src/.deps/: EasyCam.Plo  EasyCamDevice.Plo  EasyCamPacket.Plo  EasyCamPeer.Plo  Factory.Plo  GD.Plo
homegear-easycam/src/LogicalDevices/: EasyCamCentral.cpp  EasyCamCentral.h
homegear-easycam/src/LogicalDevices/.deps/: EasyCamCentral.Plo
homegear-easycam/src/PhysicalInterfaces/: EventServer.cpp  EventServer.h  IEasyCamInterface.cpp  IEasyCamInterface.h
homegear-easycam/src/PhysicalInterfaces/.deps/: EventServer.Plo  IEasyCamInterface.Plo
homegear-homematicwired/: .project  Makefile  config.h  config.h.in  config.status  configure  configure.ac  libtool
homegear-homematicwired/src/: Factory.h  GD.cpp  GD.h  HMWired.cpp  HMWired.h  HMWiredDevice.cpp  HMWiredDevice.h  HMWiredPacket.h  HMWiredPeer.cpp  HMWiredPeer.h  Makefile  Makefile.am  Makefile.in
homegear-homematicwired/src/.deps/: Factory.Plo  GD.Plo  HMWired.Plo  HMWiredDevice.Plo  HMWiredPacket.Plo  HMWiredPacketManager.Plo  HMWiredPeer.Plo
homegear-homematicwired/src/Devices/: HMWiredCentral.cpp  HMWiredCentral.h
homegear-homematicwired/src/Devices/.deps/: HMWired-SD.Plo  HMWiredCentral.Plo
homegear-homematicwired/src/PhysicalInterfaces/: IHMWiredInterface.h
homegear-homematicwired/src/PhysicalInterfaces/.deps/: HMW-LGW.Plo  IHMWiredInterface.Plo  RS485.Plo
homegear-insteon/: .project  Makefile  config.h  config.h.in  config.status  configure  configure.ac  libtool
homegear-insteon/src/: Factory.h  GD.cpp  GD.h  Insteon.cpp  Insteon.h  InsteonDevice.cpp  InsteonDevice.h  InsteonMessage.h  InsteonPacket.h  InsteonPeer.cpp  InsteonPeer.h  Makefile  Makefile.am  Makefile.in  PacketManager.h  PacketQueue.cpp  PacketQueue.h  QueueManager.cpp  QueueManager.h
homegear-insteon/src/.deps/: Factory.Plo  GD.Plo  Insteon.Plo  InsteonDevice.Plo  InsteonMessage.Plo  InsteonMessages.Plo  InsteonPacket.Plo  InsteonPeer.Plo  PacketManager.Plo  PacketQueue.Plo  PendingQueues.Plo  QueueManager.Plo
homegear-insteon/src/LogicalDevices/: InsteonCentral.cpp  InsteonCentral.h
homegear-insteon/src/LogicalDevices/.deps/: Insteon-SD.Plo  InsteonCentral.Plo
homegear-insteon/src/PhysicalInterfaces/: IInsteonInterface.h  Insteon_Hub_X10.h
homegear-insteon/src/PhysicalInterfaces/.deps/: IInsteonInterface.Plo  Insteon_Hub_X10.Plo
homegear-max/: .project  Makefile  config.status  configure  configure.ac  libtool
homegear-max/src/: Factory.h  GD.cpp  GD.h  MAX.cpp  MAX.h  MAXDevice.cpp  MAXDevice.h  MAXMessage.h  MAXPacket.h  MAXPeer.cpp  MAXPeer.h  Makefile  Makefile.am  Makefile.in  PacketManager.h  PacketQueue.cpp  PacketQueue.h  QueueManager.cpp  QueueManager.h
homegear-max/src/.deps/: Factory.Plo  GD.Plo  MAX.Plo  MAXDevice.Plo  MAXMessage.Plo  MAXMessages.Plo  MAXPacket.Plo  MAXPeer.Plo  PacketManager.Plo  PacketQueue.Plo  PendingQueues.Plo  QueueManager.Plo
homegear-max/src/LogicalDevices/: MAXCentral.cpp  MAXCentral.h
homegear-max/src/LogicalDevices/.deps/: MAXCentral.Plo  MAXSpyDevice.Plo
homegear-max/src/PhysicalInterfaces/: COC.cpp  COC.h  CUL.h  TICC1100.h
homegear-max/src/PhysicalInterfaces/.deps/: COC.Plo  CUL.Plo
homegear-philipshue/: .project  Makefile  config.h  config.status  configure  configure.ac  libtool
homegear-philipshue/src/: Factory.h  GD.cpp  GD.h  Makefile  Makefile.am  Makefile.in  PacketManager.h  PhilipsHue.cpp  PhilipsHue.h  PhilipsHueDevice.cpp  PhilipsHueDevice.h  PhilipsHuePacket.cpp  PhilipsHuePacket.h  PhilipsHuePeer.cpp  PhilipsHuePeer.h
homegear-philipshue/src/.deps/: Factory.Plo  GD.Plo  PacketManager.Plo  PhilipsHue.Plo  PhilipsHueDevice.Plo  PhilipsHuePacket.Plo  PhilipsHuePeer.Plo
homegear-philipshue/src/LogicalDevices/: PhilipsHueCentral.cpp  PhilipsHueCentral.h
homegear-philipshue/src/LogicalDevices/.deps/: PhilipsHueCentral.Plo
homegear-philipshue/src/PhysicalInterfaces/: HueBridge.cpp  HueBridge.h  IPhilipsHueInterface.h
homegear-philipshue/src/PhysicalInterfaces/.deps/: HueBridge.Plo  IPhilipsHueInterface.Plo
homegear-sonos/: .project  Makefile  config.h  config.status  configure  configure.ac  libtool
homegear-sonos/src/: Factory.h  GD.cpp  GD.h  Makefile  Makefile.am  Makefile.in  Sonos.cpp  Sonos.h  SonosDevice.cpp  SonosDevice.h  SonosPacket.h  SonosPeer.cpp  SonosPeer.h
homegear-sonos/src/.deps/: Factory.Plo  GD.Plo  Sonos.Plo  SonosDevice.Plo  SonosPacket.Plo  SonosPeer.Plo
homegear-sonos/src/LogicalDevices/: SonosCentral.cpp  SonosCentral.h
homegear-sonos/src/LogicalDevices/.deps/: SonosCentral.Plo
homegear-sonos/src/PhysicalInterfaces/: EventServer.cpp  ISonosInterface.h
homegear-sonos/src/PhysicalInterfaces/.deps/: EventServer.Plo  ISonosInterface.Plo
misc/Config Directory/: homematicbidcos.conf
misc/UI Translations/: de  en
src/: BidCoS.cpp  BidCoS.h  BidCoSDeviceTypes.h  BidCoSMessage.cpp  BidCoSMessage.h  BidCoSMessages.cpp  BidCoSMessages.h  BidCoSPacket.cpp  BidCoSPacket.h  BidCoSPacketManager.cpp  BidCoSPacketManager.h  BidCoSPeer.cpp  BidCoSPeer.h  BidCoSQueue.cpp  BidCoSQueue.h  BidCoSQueueManager.cpp  BidCoSQueueManager.h  Factory.cpp  Factory.h  GD.cpp  GD.h  HomeMaticCentral.cpp  HomeMaticCentral.h  HomeMaticDevice.cpp  HomeMaticDevice.h  Interfaces.cpp  Interfaces.h  Makefile  Makefile.am  Makefile.in  PendingBidCoSQueues.cpp  PendingBidCoSQueues.h
(+203 files in other folders)
